--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -2,7 +2,7 @@
     <table class="footer">
         <tr>
             <td>
-                <a href=home>List of Books</a>
+                <a href=../home>List of Books</a>
             </td>
             <td>
                 <a href=addNewBook>Add Book</a>
