--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -5,10 +5,10 @@
                 <a href=../home>List of Books</a>
             </td>
             <td>
-                <a href=addNewBook>Add Book</a>
+                <a href=../addNewBook>Add Book</a>
             </td>
             <td>
-                <a href=deleteABook>Delete a Book</a>
+                <a href=../deleteABook>Delete a Book</a>
             </td>
         </tr>
     </table>
