--- a/public/css/style1.css
+++ b/public/css/style1.css
@@ -1,9 +1,10 @@
 body {
     font-family: "Open Sans", "Arial", "Calibri";
     background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-    background-size: 100% 100%;
+    background-size: 400% 400%;
     animation: gradient 15s ease infinite;
     height: 100vh;
+    overflow: hidden;
 }
 
 h1 {
