--- a/views/books.ejs
+++ b/views/books.ejs
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>Home</title>
+        <title><%= books.book %></title>
         <link href="..\css\style1.css" type="text/css" rel="stylesheet"/>
     </head>
     <body>
