--- a/views/addNewBook.ejs
+++ b/views/addNewBook.ejs
@@ -6,6 +6,7 @@
         <link href="..\css\style1.css" type="text/css" rel="stylesheet"/>
     </head>
     <body>
+        <h1>Add a New Book</h1>
         <div>
             <form>
               <label for="bookName">Name</label>
