--- a/views/addNewBook.ejs
+++ b/views/addNewBook.ejs
@@ -10,13 +10,13 @@
         <div>
             <form action="/books/create">
               <label for="bookName">Name</label>
-              <input type="text" id="bookName" placeholder="Book name..">
+              <input type="text" id="bookName" name="bookName" placeholder="Book name..">
             
               <label for="authorName">Author Name</label>
-              <input type="text" id="authorName" placeholder="Author name..">
+              <input type="text" id="authorName" name="authorName" placeholder="Author name..">
             
               <label for="link">Amazon Link</label>
-              <input type="text" id="link" placeholder="Link..">
+              <input type="text" id="link" name="link" placeholder="Link..">
             
               <input type="submit" value="Submit">
             </form>
