Add books function working

--- a/views/addNewBook.ejs
+++ b/views/addNewBook.ejs
@@ -8,7 +8,7 @@
     <body>
         <h1>Add a New Book</h1>
         <div>
-            <form action="/books/create">
+            <form action="create" method="POST">
               <label for="bookName">Name</label>
               <input type="text" id="bookName" name="bookName" placeholder="Book name..">
             
