--- a/views/books.ejs
+++ b/views/books.ejs
@@ -7,6 +7,7 @@
     </head>
     <body>
         <h1><%= books.book %></h1>
+        <div>
         <table>
             <tr>
                 <tr>
@@ -21,6 +22,7 @@
                 </tr>
             </tr>
         </table>
+        </div>
         <%- include('footer') %>
     </body>
 </html>
