--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,6 +7,7 @@
     </head>
     <body>
         <h1>Click on any book to see details</h1>
+        <div>
         <table>
             <tr>
                 <% books.forEach(s=>
@@ -20,6 +21,7 @@
                 %>
             </tr>
         </table>
+        </div>
         <%- include('footer') %>
     </body>
 </html>
