--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -2,13 +2,13 @@
     <table class="footer">
         <tr>
             <td>
-                <a href=../home>List of Books</a>
+                <a href=../home><div class=foot>List of Books</div></a>
             </td>
             <td>
-                <a href=../addNewBook>Add Book</a>
+                <a href=../addNewBook><div class=foot>Add Book</div></a>
             </td>
             <td>
-                <a href=../deleteABook>Delete a Book</a>
+                <a href=../deleteABook><div class="foot">Delete a Book</div></a>
             </td>
         </tr>
     </table>
