added bottom padding

--- a/views/deleteABook.ejs
+++ b/views/deleteABook.ejs
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>To delete a book, click on the red X button.</h1>
-        <div>
+        <div class="container">
         <table id="del">
             <tr>
                 <% books.forEach(s=>
