--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>Click on any book to see details</h1>
-        <div>
+        <div class="container"> 
         <table>
             <tr>
                 <% books.forEach(s=>
