--- a/views/addNewBook.ejs
+++ b/views/addNewBook.ejs
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>Add a New Book</h1>
-        <div>
+        <div class="container">
             <form action="create" method="POST">
               <label for="bookName">Name</label>
               <input type="text" id="bookName" name="bookName" placeholder="Book name.." required>
