--- a/views/books.ejs
+++ b/views/books.ejs
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1><%= books.book %></h1>
-        <div>
+        <div class="container">
         <table>
             <tr>
                 <tr>
